@@ -1,7 +1,8 @@
 Broken Diamond: Pick up diamond shard from stamper [Shattered Diamond]
-Burnt Iron: pick up a dark iron block [Dark iron block]
+Burnt Iron: uncraft a dark iron block [Dark iron block]
 Wireless Networking: Craft a router [Router]
 Mecha Steve: craft mecha armor [Mecha bench?]
-You're in SPACE!!!: Ride a rocket into space [Nether portal]
+You're in SPACE: Ride a rocket into space [Nether portal]
 You are going to die!: be at terminal velocity at (eg) y=1k [Iron hoe]
 Cheated death: survive fall at terminal velocity [Golden hoe]
+SPACE DIAMONDS: Mine antium [Antium]
