@@ -5,6 +5,7 @@
   The barrel renders blocks much nicer now.
   Wrath lamp recipe is now 4 dark iron & 2 silver.
   Removed sentry demons chunk-loaders due to lack of confidence in their correctness. And also laziness. Use ChickenBone's chunkloaders instead. They may return with a change in job description.
+  Wrath Forges are now more expensive to operate.
 
   More Electricity:
     The battery block is made using acid & lead. When crafted, it will be fully charged. They do not stack. Battery blocks keep their charge when broken. They are used to craft magnets, which are used in motors. A battery block can't charge another battery block.
